--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,8 @@
 	      <id>nexus</id>
 	      <name>Mithun Technologies Snapshot Nexus Repository </name>
 	      <url>http://44.204.150.225:8081/repository/facebook-snapshot/</url>
+	      <user>admin</user>
+	      <password>ilihana@786</password>	    
 	    </snapshotRepository>
 	    
 	</distributionManagement>
