--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://3.83.134.65:9000/</sonar.host.url>
+		<sonar.host.url>3.95.244.243:9000/</sonar.host.url>
                 <sonar.login>b40762bbf03200e072437931e64daf6ce6388870</sonar.login>
 		
              
